# Portfolio-Optimization-Pipeline

./: .gitignore  LICENSE  hello.py  pyproject.toml
config/logging/: logging_config.yaml  logging_setup.py
src/bronze/: alpha_vantage_api.py  fred_api.py  sec_edgar_data.py
src/extract/utils/: api_utils.py
tests/unit/: conftest.py  fake_response_api.py  test_alpha_vantage_api.py  test_api.py  test_api_utils.py  test_fred_api.py
utils/: api_utils.py  config.py  logging_setup.py
