[project]
name = "finance-plan-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.36.0",
    "duckdb>=1.1.3",
    "fredapi>=0.5.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]
